--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <header></header>
     <div class="shortcut"></div>
     <div class="w middlehd"></div>
-   
     <!-- 中间轮播区域start -->
     <div class="w grid">
         <div class="grid-col1 fl">
@@ -27,62 +26,122 @@
                 <img src="images/banner-ad1.png" alt="tp" width="250" height="480">
                 <div class="ad-r"></div>
             </div>
-            <ul>
-                <li>
-                    <a href="#">家用电器</a>
-                </li>
-                <li>
-                    <a href="#">手机</a>/<a href="#">运营商</a>/<a href="#">数码</a>
-                </li>
-                <li>
-                    <a href="#">电脑</a>/<a href="#">办公</a>
-                </li>
-                <li>
-                    <a href="#">家居</a>/<a href="#">家具</a>/<a href="#">家装</a>/<a href="#">厨具</a>
-                </li>
-                <li>
-                    <a href="#">男装</a>/<a href="#">女装</a>/<a href="#">童装</a>/<a href="#">内衣</a>
-                </li>
-                <li>
-                    <a href="#">美妆</a>/<a href="#">个护清洁</a>/<a href="#">宠物</a>
-                </li>
-                <li>
-                    <a href="#">女鞋</a>/<a href="#">箱包</a>/<a href="#">钟表</a>/<a href="#">珠宝</a>
-                </li>
-                <li>
-                    <a href="#">男鞋</a>/<a href="#">运动</a>/<a href="#">户外</a>
-                </li>
-                <li>
-                    <a href="#">房产</a>/<a href="#">汽车</a>/<a href="#">汽车用品</a>
-                </li>
-                <li>
-                    <a href="#">母婴</a>/<a href="#">玩具乐器</a>
-                </li>
-                <li>
-                    <a href="#">食品</a>/<a href="#">酒类</a>/<a href="#">生鲜</a>/<a href="#">特产</a>
-                </li>
-                <li>
-                    <a href="#">艺术</a>/<a href="#">礼品鲜花</a>/<a href="#">农资绿植</a>
-                </li>
-                <li>
-                    <a href="#">医药保健</a>/<a href="#">计生情趣</a>
-                </li>
-                <li>
-                    <a href="#">图书</a>/<a href="#">音像</a>/<a href="#">电子书</a>
-                </li>
-                <li>
-                    <a href="#">机票</a>/<a href="#">酒店</a>/<a href="#">旅游</a>/<a href="#">生活</a>
-                </li>
-                <li>
-                    <a href="#">理财</a>/<a href="#">众筹</a>/<a href="#">白条</a>/<a href="#">保险</a>
-                </li>
-                <li>
-                    <a href="#">安装</a>/<a href="#">维修</a>/<a href="#">清洗保养</a>
-                </li>
-                <li>
-                    <a href="#">工业品</a>
-                </li>
-            </ul>
+            <div class="grid-col1-listshow">
+                    <ul>
+                            <li attr-id="1">
+                                <a href="#">家用电器</a>
+                            </li>
+                            <li attr-id="2">
+                                <a href="#">手机</a>/<a href="#">运营商</a>/<a href="#">数码</a>
+                            </li>
+                            <li attr-id="3">
+                                <a href="#">电脑</a>/<a href="#">办公</a>
+                            </li>
+                            <li attr-id="4">
+                                <a href="#">家居</a>/<a href="#">家具</a>/<a href="#">家装</a>/<a href="#">厨具</a>
+                            </li>
+                            <li attr-id="5">
+                                <a href="#">男装</a>/<a href="#">女装</a>/<a href="#">童装</a>/<a href="#">内衣</a>
+                            </li>
+                            <li attr-id="6">
+                                <a href="#">美妆</a>/<a href="#">个护清洁</a>/<a href="#">宠物</a>
+                            </li>
+                            <li attr-id="7">
+                                <a href="#">女鞋</a>/<a href="#">箱包</a>/<a href="#">钟表</a>/<a href="#">珠宝</a>
+                            </li>
+                            <li attr-id="8">
+                                <a href="#">男鞋</a>/<a href="#">运动</a>/<a href="#">户外</a>
+                            </li>
+                            <li attr-id="9">
+                                <a href="#">房产</a>/<a href="#">汽车</a>/<a href="#">汽车用品</a>
+                            </li>
+                            <li attr-id="10">
+                                <a href="#">母婴</a>/<a href="#">玩具乐器</a>
+                            </li>
+                            <li attr-id="11">
+                                <a href="#">食品</a>/<a href="#">酒类</a>/<a href="#">生鲜</a>/<a href="#">特产</a>
+                            </li>
+                            <li attr-id="12">
+                                <a href="#">艺术</a>/<a href="#">礼品鲜花</a>/<a href="#">农资绿植</a>
+                            </li>
+                            <li attr-id="13">
+                                <a href="#">医药保健</a>/<a href="#">计生情趣</a>
+                            </li>
+                            <li attr-id="14">
+                                <a href="#">图书</a>/<a href="#">音像</a>/<a href="#">电子书</a>
+                            </li>
+                            <li attr-id="15">
+                                <a href="#">机票</a>/<a href="#">酒店</a>/<a href="#">旅游</a>/<a href="#">生活</a>
+                            </li>
+                            <li attr-id="16">
+                                <a href="#">理财</a>/<a href="#">众筹</a>/<a href="#">白条</a>/<a href="#">保险</a>
+                            </li>
+                            <li attr-id="17">
+                                <a href="#">安装</a>/<a href="#">维修</a>/<a href="#">清洗保养</a>
+                            </li>
+                            <li attr-id="18">
+                                <a href="#">工业品</a>
+                            </li>
+                        </ul>
+                        <div class="cate_pop">
+                            <div class="json_cate_pop">
+                                <div class="1">
+                                    <h1>1</h1>
+                                </div>
+                                <div class="2">
+                                    <h1>2</h1>
+                                </div>
+                                <div class="3">
+                                    <h1>3</h1>
+                                </div>
+                                <div class="4">
+                                    <h1>4</h1>
+                                </div>
+                                <div class="5">
+                                    <h1>5</h1>
+                                </div>
+                                <div class="6">
+                                    <h1>6</h1>
+                                </div>
+                                <div class="7">
+                                    <h1>7</h1>
+                                </div>
+                                <div class="8">
+                                    <h1>8</h1>
+                                </div>
+                                <div class="9">
+                                    <h1>9</h1>
+                                </div>
+                                <div class="10">
+                                    <h1>10</h1>
+                                </div>
+                                <div class="11">
+                                    <h1>11</h1>
+                                </div>
+                                <div class="12">
+                                    <h1>12</h1>
+                                </div>
+                                <div class="13">
+                                    <h1>13</h1>
+                                </div>
+                                <div class="14">
+                                    <h1>14</h1>
+                                </div>
+                                <div class="15">
+                                    <h1>15</h1>
+                                </div>
+                                <div class="16">
+                                    <h1>16</h1>
+                                </div>
+                                <div class="17">
+                                    <h1>17</h1>
+                                </div>
+                                <div class="18">
+                                    <h1>18</h1>
+                                </div>
+                            </div>
+                        </div>
+            </div>
         </div>
         <div class="grid-col2 fl">
             <div class="focus">
@@ -129,16 +188,16 @@
                 pagination: {
                     el: '.swiper-p1',
                     clickable: true,
-                    bulletActiveClass:'focus-active',
+                    bulletActiveClass: 'focus-active',
                     renderBullet: function (index, className) {
-                    return '<li class="' + className + '">'+ '</li>';
+                        return '<li class="' + className + '">' + '</li>';
                     }
                 },
             });
-            Swiper1.el.onmouseover = function(){
+            Swiper1.el.onmouseover = function () {
                 Swiper1.autoplay.stop();
             }
-            Swiper1.el.onmouseleave = function(){
+            Swiper1.el.onmouseleave = function () {
                 Swiper1.autoplay.start();
             }
             Swiper1.pagination.$el.addClass('slider_indicators');
@@ -694,7 +753,92 @@
                             <div class="box-subtit">专属你的购物指南</div>
                         </a>
                     </div>
-                    <div class="box-bd"></div>
+                    <div class="box-bd">
+                        <div class="top-inner">
+                            <div class="tab-head">
+                                <div class="tab-head-item" attr-id="1">
+                                    <a href="#">手机通讯</a>
+                                </div>
+                                <div class="tab-head-item" attr-id="2">
+                                    <a href="#">男装</a>
+                                </div>
+                                <div class="tab-head-item" attr-id="3">
+                                    <a href="#">面部护肤</a>
+                                </div>
+                                <div class="tab-head-item" attr-id="4">
+                                    <a href="#">饮料冲调</a>
+                                </div>
+                                <div class="tab-head-item" attr-id="5">
+                                    <a href="#">休闲食品</a>
+                                </div>
+                            </div>
+                            <div class="tab-body">
+                                <div class="swiper-container top-container">
+                                    <div class="swiper-wrapper top-wrapper">
+                                        <div class="swiper-slide top-slide">
+                                            <div class="top-item">
+                                                <a href="#" class="top-item-lk">
+                                                    <div class="top-item-img">
+                                                        <img src="images/top1.webp" alt="">
+                                                    </div>
+                                                    <span class="top-item-rank">1</span>
+                                                    <span class="top-item-name">摩托罗拉（Motorola）xir C2660数字对讲机 DMR手调频商用5W手台全国联保 标配</span>
+                                                </a>
+                                            </div>
+                                            <div class="top-item">
+                                                <a href="#" class="top-item-lk">
+                                                    <div class="top-item-img">
+                                                        <img src="images/top2.webp" alt="">
+                                                    </div>
+                                                    <span class="top-item-rank">2</span>
+                                                    <span class="top-item-name">荣耀8X 千元屏霸 91%屏占比 2000万AI双摄 4GB+64GB 幻夜黑 移动联通电信4G全面屏手机 双卡双待</span>
+                                                </a>
+                                            </div>
+                                            <div class="top-item">
+                                                <a href="#" class="top-item-lk">
+                                                    <div class="top-item-img">
+                                                        <img src="images/top3.webp" alt="">
+                                                    </div>
+                                                    <span class="top-item-rank">3</span>
+                                                    <span class="top-item-name">Apple 苹果 iPhone Xs Max 手机 金色 （原装蓝牙无线耳机）全网通256G套装版</span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide top-slide">
+                                            <div class="top-item">
+                                                <a href="#" class="top-item-lk">
+                                                    <div class="top-item-img">
+                                                        <img src="images/top4.webp" alt="">
+                                                    </div>
+                                                    <span class="top-item-rank">4</span>
+                                                    <span class="top-item-name">Apple iPhone X (A1865) 64GB 深空灰色 移动联通电信4G手机</span>
+                                                </a>
+                                            </div>
+                                            <div class="top-item">
+                                                <a href="#" class="top-item-lk">
+                                                    <div class="top-item-img">
+                                                        <img src="images/top5.webp" alt="">
+                                                    </div>
+                                                    <span class="top-item-rank">5</span>
+                                                    <span class="top-item-name">Apple iPhone 8 Plus (A1864) 64GB 深空灰色 移动联通电信4G手机</span>
+                                                </a>
+                                            </div>
+                                            <div class="top-item">
+                                                <a href="#" class="top-item-lk">
+                                                    <div class="top-item-img">
+                                                        <img src="images/top6.webp" alt="">
+                                                    </div>
+                                                    <span class="top-item-rank">6</span>
+                                                    <span class="top-item-name">Apple iPhone XS Max (A2104) 256GB 银色 移动联通电信4G手机 双卡双待</span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-pagination top-pagination"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="box daily">
                     <div class="box-hd">
@@ -939,6 +1083,20 @@
                 },
             });
         </script>
+        <script>
+            var topswiper = new Swiper('.top-container', {
+                autoplay: false,
+                loop: true,
+                speed: 700,
+                pagination: {
+                    el: '.top-pagination',
+                    clickable: true,
+                    renderBullet: function (index, className) {
+                        return '<li class="' + className + '">' + '</i>';
+                    },
+                },
+            });
+        </script>
         <div class="corechn2 ">
             <div class="corechn2-inner grid-c1">
                 <div class="box mime">
@@ -1099,16 +1257,32 @@
     </div>
     <footer></footer>
     <script src="js/jquery.js"></script>
-    <script>  
+    <!-- banner轮播 -->
+    <script>
+        var $col1_list = $('.grid-col1-listshow');
+        var $cate_pop = $('.cate_pop')
+        var $json_cate = $('.json_cate_pop');
+        $col1_list.find('li').on('mouseenter', function () {
+            var $liid = this.getAttribute('attr-id');
+            $json_cate.children(`.${$liid}`).show().siblings().hide();
+        })
+        $col1_list.on('mouseenter', function () {
+            $cate_pop[0].style = 'display:block'
+        })
+        $col1_list.on('mouseleave', function () {
+            $cate_pop[0].style = 'display:none'
+        })
+    </script>
+    <script>
         $('header').load('headbottom.html header');
         $('.shortcut').load('headbottom.html .shortcut');
         $('.middlehd').load('headbottom.html .middlehd');
         $('footer').load('headbottom.html .footer');
-        $(document).ready(function(){
-            $("li:has(.drop-layer)").on('mouseenter',function(event){
+        $(document).ready(function () {
+            $("li:has(.drop-layer)").on('mouseenter', function (event) {
                 $(this).find('.drop-layer').toggleClass('active');
             })
-            $("li:has(.drop-layer)").on('mouseleave',function(event){
+            $("li:has(.drop-layer)").on('mouseleave', function (event) {
                 $(this).find('.drop-layer').toggleClass('active');
             })
         })
