--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,京东" />
     <title>京东(JD.COM)-正品低价、品质保障、配送及时、轻松购物！</title>
     <link rel="shotcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.0/css/swiper.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/init.css">
     <link rel="stylesheet" href="css/base.css">
